# maru

./: .clang-format  .gitignore  CMakeLists.txt  COMPLETION_MATRIX.md  README.md  TODO.md  imgui.ini  maru_cursor_assets.c  maru_cursor_assets.h
.github/workflows/: ci.yml
docs/dev/: comprehensive_test_plan.md  event_mask_refactor_tasklist.md  internal_checks_caveats.md  macos_backend_checklist.md  misc_behaviors.md  release_checklist.md  windows_backend_checklist.md
docs/dev/planned_api/maru/: maru.h
docs/user/: X11.md  api_contracts.md  basic_window.md  dataexchange.md  getting_started.md  index.md  inputs.md  integration.md  macos_backend.md  metrics.md  monitors.md  queue.md  vulkan.md  wayland.md  windows.md  windows_backend.md
examples/: CMakeLists.txt
examples/basic_c/: CMakeLists.txt  main.c
examples/basic_cpp/: CMakeLists.txt  main.cpp
examples/basic_metal/: CMakeLists.txt  main.m
examples/frame_sync_c/: CMakeLists.txt  main.c
examples/queue_cpp/: CMakeLists.txt  main.cpp
examples/shared_renderer/: shaders.c  vulkan_renderer.c  vulkan_renderer.h
examples/support/: ime_utils.c  ime_utils.h
examples/support/shared_renderer/: shaders.h  vulkan_renderer.h
examples/testbed/: CMakeLists.txt  app.cpp  app.h  cursor_tester.cpp  cursor_tester.h  event_log.cpp  event_log.h  event_viewer.cpp  event_viewer.h  feature_module.h  imgui_impl_maru.cpp  imgui_impl_maru.h  main.c  main.cpp  monitor_explorer.cpp  monitor_explorer.h  window_manager.cpp  window_manager.h
examples/testbed/modules/: composition_module.cpp  composition_module.h  context_module.cpp  context_module.h  controller_module.cpp  controller_module.h  cursor_module.cpp  cursor_module.h  dataexchange_module.cpp  dataexchange_module.h  event_log_module.cpp  event_log_module.h  event_module.cpp  event_module.h  input_module.cpp  input_module.h  instrumentation_module.cpp  instrumentation_module.h  metrics_module.cpp  metrics_module.h  monitor_module.cpp  monitor_module.h  timing_module.cpp  timing_module.h  tuning_module.h  window_module.cpp  window_module.h
include/: maru.h
include/maru/: maru.h  maru.hpp  maru_queue.h  queue.h  vulkan.h  vulkan.hpp
include/maru/c/: contexts.h  controllers.h  convenience.h  core.h  cursors.h  data_exchange.h  events.h  geometry.h  images.h  inputs.h  instrumentation.h  metrics.h  monitors.h  tuning.h  vulkan.h  windows.h
include/maru/c/details/: contexts.h  controllers.h  convenience_impls.h  cursors.h  data_exchange.h  images.h  inputs.h  maru_abi_checks.h  (+2 more)
include/maru/cpp/: context.hpp  controller.hpp  cursor.hpp  cxx20.hpp  error.hpp  events.hpp  expected.hpp  fwd.hpp  image.hpp  monitor.hpp  queue.hpp  window.hpp
include/maru/details/: maru_config.h  maru_cxx20_impl.hpp  maru_details.h  maru_hpp_impl.hpp
include/maru/native/: cocoa.h  linux.h  wayland.h  win32.h  x11.h
src/: CMakeLists.txt
src/core/: core.c  core_event_queue.c  core_event_queue.h  core_indirect_entry.c  internal_event_queue.c  internal_event_queue.h  maru_api_constraints.h  maru_backend.h  maru_config.h.in  maru_internal.h  maru_mem_internal.h  maru_queue.c  maru_vulkan_types.h  vulkan_api_constraints.h  window_state.h
src/core/linux/: CMakeLists.txt  linux_common.c  linux_context.c  linux_controllers.c  linux_controllers.h  linux_dataexchange.c  linux_dataexchange.h  linux_entry.c  linux_input.c  linux_internal.h  linux_native_stubs.h
src/core/linux/dlib/: linux_loader.c  linux_loader.h  udev.h  xkbcommon.h
src/core/linux/wayland/: CMakeLists.txt  context.c  wayland.c  wayland_context.c  wayland_controller.c  wayland_controllers.c  wayland_csd.c  wayland_cursor.c  wayland_dataexchange.c  wayland_entry.c  wayland_image.c  wayland_input.c  wayland_internal.h  wayland_misc.c  wayland_monitor.c  wayland_ssd.c  wayland_utils.c  wayland_vulkan.c  wayland_window.c
src/core/linux/wayland/dlib/: libdecor.h  loader.c  loader.h  wayland-client.h  wayland-cursor.h
src/core/linux/wayland/protocols/: maru_protocols.c  maru_protocols.h
src/core/linux/wayland/protocols/xml/: tablet-v2.xml
src/core/linux/x11/: CMakeLists.txt  X11_TODO.md  X11_context.c  context.c  x11_context.c  x11_cursor.c  x11_dataexchange.c  x11_entry.c  x11_input.c  x11_internal.h  x11_monitor.c  x11_vulkan.c  x11_window.c
src/core/linux/x11/dlib/: loader.c  loader.h  x11.h  xcursor.h  xfixes.h  xi2.h  xrandr.h  xshape.h  xss.h
src/core/macos/: CMakeLists.txt  macos_context.c  macos_context.m  macos_controller.m  macos_cursor.m  macos_dataexchange.m  macos_entry.c  macos_entry.m  macos_image.m  macos_internal.h  macos_monitor.m  macos_vulkan.m  macos_window.c  macos_window.m
src/core/windows/: CMakeLists.txt  windows_context.c  windows_contexts.c  windows_controllers.c  windows_cursors.c  windows_data_exchange.c  windows_entry.c  windows_events.c  windows_images.c  windows_internal.h  windows_monitors.c  windows_vulkan.c  windows_window.c  windows_windows.c
src/ext-vulkan/: CMakeLists.txt  ext_vulkan_internal.h  linux.c  maru_ext_vulkan_api_constraints.h  vulkan_api_constraints.h  wayland.c  windows.c  x11.c
src/unity/: maru.c  maru_linux_dynamic.c  maru_macos.m  maru_wayland.c  maru_windows.c  maru_x11.c
tests/: CMakeLists.txt  maru_test_utils.h  test_allocator.c  test_allocator.cpp  test_diagnostics.c  test_diagnostics.cpp  test_linux_worker.c
tests/integration/: README.md  test_context.cpp  test_desktop_smoke.cpp  test_queue.cpp  test_window.cpp  test_x11_frame_sync.cpp
tests/integration/harness/: automation_driver.cpp  automation_driver.h  test_session.cpp  test_session.h  tracking_allocator.cpp  tracking_allocator.h
tests/integration/harness/adapters/: linux_wayland_driver.cpp  linux_x11_driver.cpp  macos_driver.cpp  windows_driver.cpp
tests/integration/support/: tracking_allocator.cpp  tracking_allocator.h
tests/smoke/: test_presentation.cpp
tests/unit/: maru_test_utils.h  test_allocator.c  test_diagnostics.c  test_linux_worker.c  test_queue.c  test_text.c  test_x11_dataexchange.c
tools/scripts/: generate_maru_protocols.sh  generate_maru_wayland_helpers.py  png_cursor_to_c.py
(+32 files in other folders)
